<resources>
    <string name="app_name">DentistApp</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entre">Entrar</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="a_facilidade_na_hora_de_marcar_suas_consultas">A facilidade na hora de marcar suas consultas</string>
    <string name="todo">TODO</string>
    <string name="title_activity_principal">Principal</string>
    <string name="logar">Logar</string>
    <string name="criar_uma_conta">Criar uma conta</string>
    <string name="salve">SALVE</string>
</resources>