<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="242dp"
        android:layout_height="54dp"
        android:layout_marginBottom="32dp"
        android:text="@string/a_facilidade_na_hora_de_marcar_suas_consultas"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:text="@string/termos_de_uso"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginMain" />

    <Button
        android:id="@+id/buttonRegisterMain"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_buttons"
        android:onClick="AbrirTelaCadastro"
        android:text="@string/criar_uma_conta"
        android:textColor="#000000"
        app:iconTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/buttonLoginMain"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_buttons"
        android:onClick="AbrirTelaLogin"
        android:text="@string/logar"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterMain" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="190dp"
        android:layout_height="181dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@mipmap/logosprincipal_round" />

</androidx.constraintlayout.widget.ConstraintLayout>